Closed Bug 1267259 Opened 9 years ago Closed 9 years ago

Thunderbird: Unable to drag and drop attachments to OS file folder - caused by Core::DOM:Events

Categories

(Core :: DOM: Events, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox48 --- fixed
firefox49 --- fixed

People

(Reporter: jorgk-bmo, Assigned: enndeakin)

References

Details

(Keywords: regression)

Attachments

(1 file, 2 obsolete files)

Since bug 270292 we were able to drag multiple attachment to an OS folder. This feature is in TB 45 and it works. I am using TB 48.0a1 (2016-04-24) Daily and I can't even drag a single attachment any more. So something went bust somewhere. Alice, can you find a regression window for us?
Alice, just try to drag a single attachment from a message onto the desktop or some other folder. Thanking you in advance.
Flags: needinfo?(alice0775)
Flags: needinfo?(enndeakin)
Can you check if this patch fixes things?
Flags: needinfo?(enndeakin)
Thanks, Neil. I will check this in the next few hours.
(In reply to Neil Deakin from comment #3) > Created attachment 8745008 [details] [diff] [review] > Add extra drag promise types to whitelist > > Can you check if this patch fixes things? I confirmed in a local win32 build that the attached patch (comment 3) fixes the problem.
Thanks, my VS2013 build is currently broken, I need to download VS2015 (7GB) first. I'll get to it tomorrow (midnight here now).
Component: Attachments → DOM: Events
Product: MailNews Core → Core
Neil, thanks for the patch. As Alice already said in comment #5, this fixes the problem. However, the patch didn't apply due to some white-space issues. I'll attach my version. Can you please get this reviewed and landed and also back-ported to FF 48 (Aurora) since the problem was caused there.
Attachment #8745008 - Attachment is obsolete: true
Attachment #8745249 - Flags: feedback+
Flags: needinfo?(enndeakin)
Summary: Unable to drag and drop attachments to OS file folder → Thunderbird: Unable to drag and drop attachments to OS file folder - caused by Core::DOM:Events
Oops, mis-edited that. Now it's right.
Attachment #8745249 - Attachment is obsolete: true
Attachment #8745255 - Flags: feedback+
Comment on attachment 8745255 [details] [diff] [review] Add extra drag promise types to whitelist (made it apply) Windows and Mac use these types to specify the url and filename of downloads.
Flags: needinfo?(enndeakin)
Attachment #8745255 - Flags: review?(bugs)
Attachment #8745255 - Flags: review?(bugs) → review+
Keywords: checkin-needed
Neil, looks like the sheriffs haven't picked it up. Their rules also are the a try run needs to be attached. Can you simply push it to inbound. Thanks.
Flags: needinfo?(enndeakin)
OK, done.
Flags: needinfo?(enndeakin)
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
Comment on attachment 8745255 [details] [diff] [review] Add extra drag promise types to whitelist (made it apply) Approval Request Comment [Feature/regressing bug #]: Bug 860857 [User impact if declined]: Drag and drop of files from the Firefox download list (comment #9) or from Thunderbird's message attachment area to an operation system folder won't work. [Describe test coverage new/current, TreeHerder]: Manual test only. [Risks and why]: This was broken recently just before the branch day (Apr 25, 2016), so it should be fixed in the same cycle of bug that broke it. [String/UUID change made/needed]: None.
Attachment #8745255 - Flags: approval-mozilla-aurora?
Assignee: nobody → enndeakin
Gentle ping to get this landed on Aurora (and bug 1267612, too).
Flags: needinfo?(lhenry)
Comment on attachment 8745255 [details] [diff] [review] Add extra drag promise types to whitelist (made it apply) Fix for drag and drop from Downloads, it's been in nightly a while, OK to uplift to aurora.
Flags: needinfo?(lhenry)
Attachment #8745255 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: