Bug 1267259 - Add extra drag promise types to whitelist. r=smaug, a=lizzard

--HG--
extra : source : 54b1f93e6b73e40cbf04dbb2f03d37714b89f695